--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -9,7 +9,6 @@ html {
 *, *:before, *:after {
   box-sizing: inherit;
 }
-
 /*
  * Global layout stuff
  */
@@ -18,6 +17,14 @@ body {
   margin: 0;
   color: #244751;
   background-color: #eee;
+  font-family: 'Roboto Condensed', sans-serif;
+}
+
+main.container {
+  padding: 140px 2em 2em;
+  width: 450px;
+  margin: 0 auto;
+  background: white;
 }
 
 /*
