--- a/public/styles/navbar.css
+++ b/public/styles/navbar.css
@@ -1,5 +1,6 @@
 #nav-bar {
   position: fixed;
+  opacity: 1;
   top: 0;
   width: 100%;
   height: 80px;
@@ -17,7 +18,7 @@
 }
 
 #nav-bar .header {
-  color: white;
+  color: #fff;
   font-size: 2em;
   line-height: 80px;
 }
