--- a/public/styles/navbar.css
+++ b/public/styles/navbar.css
@@ -1,6 +1,5 @@
 #nav-bar {
   position: fixed;
-  opacity: 1;
   top: 0;
   width: 100%;
   height: 80px;
@@ -8,6 +7,7 @@
   font-color: #e8fdff;
   padding: 0 2em;
   overflow: auto;
+  z-index: 1;
 }
 
 #nav-bar .logo {
