--- a/public/styles/navbar.css
+++ b/public/styles/navbar.css
@@ -1,4 +1,4 @@
-#nav-bar {
+.nav-bar {
   position: fixed;
   top: 0;
   width: 100%;
@@ -10,15 +10,31 @@
   z-index: 1;
 }
 
-#nav-bar .logo {
+.nav-bar .logo {
   width: 80px;
   height: 80px;
   float: left;
   padding-right: 10px;
 }
 
-#nav-bar .header {
+.nav-bar .header {
   color: #fff;
   font-size: 2em;
   line-height: 80px;
+}
+
+.nav-bar .compose {
+  padding: 10px;
+  float: right;
+  margin: 15px 0px;
+  font-color: #fff;
+  font-size: 1.5em;
+  background-color: #e8fdff;
+  border: 1px solid grey;
+  border-radius: 5px;
+  opacity: 0.8;
+}
+
+.nav-bar .compose:hover {
+  opacity: 0.9;
 }
