--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,10 +1,12 @@
 .new-tweet {
+  display: none;
   background-color: #eee;
   content-align: center;
-  width: 100%;
+  width: auto;
   padding: 0 20px;
   border: 1px solid lightgrey;
   border-radius: 5px;
+  margin-bottom: 10px;
 }
 
 .new-tweet h2 {
