--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -1,11 +1,12 @@
 .tweets {
   content-align: center;
-  width: 100%;
+  width: auto;
   padding: 20px;
 }
 
 .tweet {
   border: 1px solid lightgrey;
+  width: auto;
   border-radius: 5px;
   opacity: 0.6;
   margin-bottom: 20px;
