--- a/public/sass/_navbar.scss
+++ b/public/sass/_navbar.scss
@@ -1,40 +1,41 @@
 .nav-bar {
   position: fixed;
-  top: 0;
-  width: 100%;
+  left: 0;
+  right: 0;
   height: 80px;
-  background-color: #00A087;
-  font-color: #e8fdff;
-  padding: 0 2em;
+  top: 0;
+  background-color: $green;
+  font-color: $light-green;
+  padding: 0 20px;
   overflow: auto;
   z-index: 1;
-}
 
-.nav-bar .logo {
+  .logo {
   width: 80px;
   height: 80px;
   float: left;
   padding-right: 10px;
-}
+  }
 
-.nav-bar .header {
+  .header {
   color: #fff;
   font-size: 2em;
   line-height: 80px;
-}
+  }
 
-.nav-bar .compose {
+  .compose {
   padding: 10px;
   float: right;
   margin: 15px 0px;
   font-color: #fff;
   font-size: 1.5em;
-  background-color: #e8fdff;
+  background-color: $light-green;
   border: 1px solid grey;
   border-radius: 5px;
   opacity: 0.8;
-}
-
-.nav-bar .compose:hover {
+  &:hover {
   opacity: 0.9;
+  cursor: pointer;
+  }
+  }
 }
