--- a/public/sass/_page.scss
+++ b/public/sass/_page.scss
@@ -1,5 +1,11 @@
+$font-stack:    'Roboto Condensed', sans-serif;
+$green: #00A087;
+$light-green: lighten($green, 60%);
+$dark-blue: #244751;
+
 html {
   box-sizing: border-box;
+  font-size: 16px;
 }
 *, *:before, *:after {
   box-sizing: inherit;
@@ -7,9 +13,9 @@ html {
 
 body {
   margin: 0;
-  color: #244751;
+  color: $dark-blue;
   background-color: #eee;
-  font-family: 'Roboto Condensed', sans-serif;
+  font-family: $font-stack;
 }
 
 main.container {
