--- a/public/sass/_tweets.scss
+++ b/public/sass/_tweets.scss
@@ -9,49 +9,49 @@
   border-radius: 5px;
   opacity: 0.6;
   margin-bottom: 20px;
-}
 
-.tweet:hover {
+  &:hover {
   opacity: 1;
-}
+  }
 
-.tweet .icons {
+  .icons {
   float: right;
   display: none;
-}
+  }
 
-.tweet:hover .icons {
+  &:hover .icons {
   display: inline;
-}
+  cursor: pointer;
+  }
 
-.tweet header {
+  header {
   background-color: #eee;
   padding: 10px;
-}
+  }
 
-.tweet p {
+  p {
   padding: 20px;
-}
+  }
 
-.tweet footer {
+  footer {
   padding: 10px;
   border-top: 1px solid #eee;
-}
+  }
 
-.tweet .user {
+  .handle {
+    color: grey;
+    padding: 10px;
+    float: right;
+  }
+
+  .user {
   font-size: 1.5em;
   vertical-align: top;
-}
-
-.tweet .user img {
-  height: 60px;
-  width: 60px;
-  border: 1px solid lightgrey;
-  border-radius: 5px;
-}
-
-.tweet .handle {
-  color: grey;
-  padding: 10px;
-  float: right;
+    img {
+    height: 60px;
+    width: 60px;
+    border: 1px solid lightgrey;
+    border-radius: 5px;
+    }
+  }
 }
