Added likes componenet and incrementLikes function to store values in the database.

--- a/sass/_tweets.scss
+++ b/sass/_tweets.scss
@@ -17,6 +17,9 @@
   .icons {
   float: right;
   display: none;
+  .like:hover {
+    font-color: $light-green;
+  }
   }
 
   &:hover .icons {
@@ -54,4 +57,8 @@
     border-radius: 5px;
     }
   }
+}
+
+.liked {
+  color: tomato;
 }
